--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@tailwindcss/vite": "^4.1.11",
+    "chart.js": "^4.5.0",
     "d3": "^7.9.0",
     "particles.js": "^2.0.0",
     "pinia": "^3.0.3",
