--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "vue": "^3.5.17",
     "vue-router": "^4.5.1",
     "vue-typer": "^1.2.0",
-    "vue-typer-next": "^1.0.1"
+    "vue-typer-next": "^1.0.1",
+    "vue3-google-map": "^0.23.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.0",
