--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.1.11",
     "chart.js": "^4.5.0",
     "d3": "^7.9.0",
+    "firebase": "^12.0.0",
     "particles.js": "^2.0.0",
     "pinia": "^3.0.3",
     "tagcloud": "^1.1.0-1",
@@ -24,6 +25,7 @@
     "vue3-google-map": "^0.23.0"
   },
   "devDependencies": {
+    "@types/node": "^24.0.15",
     "@vitejs/plugin-vue": "^6.0.0",
     "vite": "^7.0.0",
     "vite-plugin-vue-devtools": "^7.7.7"
