--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@capacitor/android": "^7.4.2",
+    "@capacitor/cli": "^7.4.2",
+    "@capacitor/core": "^7.4.2",
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.10.0",
@@ -23,7 +26,8 @@
     "vue-router": "^4.5.1",
     "vue-typer": "^1.2.0",
     "vue-typer-next": "^1.0.1",
-    "vue3-google-map": "^0.23.0"
+    "vue3-google-map": "^0.23.0",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@types/node": "^24.0.15",
